--- a/app/client/main.html
+++ b/app/client/main.html
@@ -5,6 +5,6 @@
   <title>meteor-application-template</title>
 </head>
 
-<body>
+<body style="background-color:#767676">
   <div id="root"></div>
 </body>
