--- a/app/client/main.html
+++ b/app/client/main.html
@@ -1,6 +1,7 @@
 <head>
   <meta charset="utf-8">
-  <link rel="shortcut icon" href="/favicon.ico">
+  <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+  <link rel="icon" href="/favicon.ico" type="image/x-icon">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Roommate Radar</title>
 </head>
